added custom classes to use in tailwind

--- a/src/index.css
+++ b/src/index.css
@@ -121,3 +121,21 @@
     @apply bg-background text-foreground;
   }
 }
+
+.main-container {
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+}
+
+.section {
+  scroll-snap-align: start;
+}
+
+
+.icon-hover {
+  @apply transition-all duration-300 hover:scale-112 hover:fill-pink-500;
+}
+
+.link-hover {
+  @apply transition-all duration-300 hover:scale-107;
+}
