Refular scrolling with hrefs instead of fullpage design for now

--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,14 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  html {
+    @apply scroll-smooth;
+
+  }
 }
+
+
 
 .main-container {
   scroll-snap-type: y mandatory;
