some additional apply classes to reuse

--- a/src/index.css
+++ b/src/index.css
@@ -149,6 +149,14 @@
   scroll-snap-align: start;
 }
 
+.chevron-container{
+  @apply w-fit bg-black/10 text-black md:p-1 lg:p-2 xl:p-3 rounded-full cursor-pointer hover:bg-black/9
+}
+
+.chevron-sizing {
+  @apply md:w-4 lg:w-5 2xl:w-6 h-auto
+}
+
 
 .icon-hover {
   @apply transition-all duration-300 hover:scale-112 hover:fill-pink-500;
