--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Limelight&display=swap');
+
 @import "tailwindcss";
 @import "tw-animate-css";
 @import 'tailwind-scrollbar-hide/v4';
+
+
+@theme {
+  --font-funnel: "Funnel Sans", sans-serif;
+  --font-bodoni: "Libre Bodoni", serif;
+  --font-limelight: "Limelight", cursive;
+}
 
 @custom-variant dark (&:is(.dark *));
 
@@ -116,14 +125,6 @@
 }
 
 
-@font-face {
-  font-family: 'Limelight';
-  src: url('public/fonts/Limelight-Regular.ttf') format('truetype');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
 @layer base {
   * {
     @apply border-border outline-ring/50;
@@ -150,7 +151,7 @@
   scroll-snap-align: start;
 }
 
-.chevron-container{
+.chevron-container {
   @apply w-fit bg-black/10 text-black md:p-1 lg:p-2 xl:p-3 rounded-full cursor-pointer hover:bg-black/9
 }
 
@@ -166,3 +167,48 @@
 .link-hover {
   @apply transition-all duration-300 hover:scale-107;
 }
+
+
+@theme {
+
+  --animate-gradient: gradient 5s ease infinite;
+
+
+  @keyframes gradient {
+
+    0% {
+      background-position: 0% 0%;
+    }
+
+    50% {
+      background-position: 100% 100%;
+    }
+
+    100% {
+      background-position: 0% 0%;
+    }
+  }
+}
+
+@theme {
+  --animate-float: float 5s ease-in-out infinite;
+
+  @keyframes float {
+
+    0%,
+    20% {
+      transform: translateY(0);
+    }
+
+    50% {
+      transform: translateY(-0.4rem);
+    }
+
+    80%,
+    100% {
+      transform: translateY(0);
+    }
+  }
+}
+
+
